<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Primer ejercicio -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvInfoNumJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvInfoNumJugadores"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvNumJugadores"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvNumJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/tvInfoNumJugadores"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMenosJugadores"
            app:layout_constraintStart_toEndOf="@id/btnMasJugadores"/>

        <Button
            android:id="@+id/btnMenosJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMenosJugadores"
            app:layout_constraintTop_toBottomOf="@id/tvInfoNumJugadores"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvNumJugadores" />

        <Button
            android:id="@+id/btnMasJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMasJugadores"
            app:layout_constraintTop_toBottomOf="@id/tvInfoNumJugadores"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvNumJugadores"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Segundo ejercicio -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvNombreJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreJuego"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvMostrarNombreJuego"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvMostrarNombreJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/tvNombreJuego"
            app:layout_constraintBottom_toTopOf="@id/etEscribeNombreJuego"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEscribeNombreJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/etEscribeNombreJuego"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/btnCopiarNombreJuego"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMostrarNombreJuego" />

        <Button
            android:id="@+id/btnCopiarNombreJuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCopiarNombreJuego"
            app:layout_constraintTop_toBottomOf="@id/etEscribeNombreJuego"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tercer ejercicio -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CheckBox
            android:id="@+id/cbEnLaColeccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbEnLaColeccion"
            android:checked="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvPulsaBoton"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvPulsaBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPulsaBoton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnPulsame"
            app:layout_constraintStart_toEndOf="@id/cbEnLaColeccion" />

        <Button
            android:id="@+id/btnPulsame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPulsame"
            android:enabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPulsaBoton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>