<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNombreAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreAutor"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toTopOf="@id/btnCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuyTexto"
        app:layout_constraintTop_toBottomOf="@id/tvNombreAutor"
        app:layout_constraintBottom_toTopOf="@id/etContadorJuegosComprados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvJuegosComprados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvJuegosComprados"
        android:textColor="@color/Text"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintEnd_toStartOf="@id/etContadorJuegosComprados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCheck"
 />

    <EditText
        android:id="@+id/etContadorJuegosComprados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvJuegosComprados"
        app:layout_constraintTop_toBottomOf="@id/btnCheck" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnResetTexto"
        app:layout_constraintTop_toBottomOf="@id/tvNombreAutor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>